--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -47,10 +47,10 @@ the threshold and the bias voltage are shown in
 \cref{tab:nominalBiasThreshold}. For the nominal bias voltage, the
 sensor is fully (or over) depleted. The nominal threshold set, insures
 that the readout chip is not operating in noisy
-conditions. \cref{sec:noise} describes the procedure for the selection
-of the nominal threshold value. These nominal values are held
-throughout the data taking except for the cases where the threshold or
-the bias voltages are scanned.
+conditions. \cref{sec:operatingThreshold} describes the procedure for
+the selection of the nominal threshold value. These nominal values are
+held throughout the data taking except for the cases where the
+threshold or the bias voltages are scanned.
 
 \begin{table}[htbp]
   \centering
