[CLIC] few of the Konrad's comments

--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -194,9 +194,9 @@ measurements as described in the following chapters.
 The schematic layout of the CLIC accelerator complex at
 $\sqrt{s}=3\,\tev$ is shown in \cref{fig:CLIC_accelerator}. The
 electron and positron beams are accelerated on a linear trajectory and
-collide in the central region (in the interaction point), where the
-CLIC detector is placed. At this stage, each linac is fed by a
-drive-beam generation complex. 
+collide in the central region (at the interaction point), where the
+CLIC detector is placed. Each linac is fed by a drive-beam generation
+complex.
 
 \begin{figure}[htbp]
   \centering
@@ -210,13 +210,14 @@ drive-beam generation complex.
 To limit the length of the accelerator, the accelerating field has to
 be as high as possible. The accelerating gradient is chosen to be
 100~MV/m. This leads to the use of copper cavities at room temperature
-instead of superconducting cavities since their intrinsic maximum
-field is limited. The copper cavities are fed with very high radio
-frequency (RF) power with a frequency of $12\,\gigahertz$ to generate
-the high accelerating field. This lead to a total RF peak power of
-9.2~TW for both linacs. Since maintaining such high power levels is
-not possible for very long, the duration of the bunch train is limited
-to 156~ns long with a repetition frequency of 50~Hz.
+instead of superconducting cavities since the latter have an
+intrinsically limited maximum field. The copper cavities are fed with
+very high radio frequency (RF) power at a frequency of
+$12\,\gigahertz$ to generate the high accelerating field. This leads
+to a total RF peak power of 9.2~TW for both linacs. Since maintaining
+such high power levels is not possible for very long, the duration of
+the bunch train is limited to 156~ns long with a repetition frequency
+of 50~Hz.
 
 
 Klystrons are foreseen to provide the RF power used by the
@@ -266,10 +267,10 @@ differences in beam parameters.
 
 The small beam sizes at CLIC cause strong electromagnetic radiation
 (Beamstrahlung) from the electron and positron bunches in the field of
-the opposite beam. The generation of Beamstrahlung photons leads to
-the reduction of the available centre-of-mass energy $\sqrt{s}$ of the
-e\textsuperscript{+}e\textsuperscript{-} collisions. Their
-interactions produce lepton pairs and hadrons at very low polar angles
+the opposite beam. When Beamstrahlung photons are generated, this
+leads to a reduction of the available centre-of-mass energy $\sqrt{s}$
+of the e\textsuperscript{+}e\textsuperscript{-} collisions. Their
+interactions produce lepton pairs and hadrons at low polar angles
 which are mostly contained in the
 beam-pipe~\cite{Dannheim:1443516}. In the inner detector layers,
 incoherently produced electron-positron pairs ($\sim60$ particles per
