[Silicon] updates on the silicon chapter

--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -1144,7 +1144,11 @@ electric field distribution and the diffusion causes multi-pixel hits.
 \end{figure}
 
 
-\subsection{Spatial resolution}
+\subsection{Position measurement}
+
+A pixel detector is obtained by segmenting the electrodes of a silicon
+sensor. This provides a two-dimensional information on the position of
+particle track. Depending on the
 
 The spatial resolution of a pixel detector is mainly determined by the
 pixel pitch. But this can be improved by the readout choice (binary or
